objects/ssot__Promotion__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__PromotionalImageURL__c</fullName>
        <label>[DoNotUse]Promotional Image</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>[DoNotUse]Promotional Image</masterLabel>
            <refAttrDeveloperName>PromotionalImageURL</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalImage__c</fullName>
        <label>Promotional Image</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Promotional Image</masterLabel>
            <refAttrDeveloperName>PromotionalImage</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalMessageText__c</fullName>
        <label>[DoNotUse]Promotional Message</label>
        <length>255</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>[DoNotUse]Promotional Message</masterLabel>
            <refAttrDeveloperName>PromotionalMessageText</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PromotionalMessage__c</fullName>
        <label>Promotional Message</label>
        <length>60</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Promotional Message</masterLabel>
            <refAttrDeveloperName>PromotionalMessage</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RelatedPromotionId__c</fullName>
        <label>Related Promotion</label>
        <length>15</length>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Related Promotion</masterLabel>
            <refAttrDeveloperName>RelatedPromotionId</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentEndDate__c</fullName>
        <label>Shipment End Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Shipment End Date</masterLabel>
            <refAttrDeveloperName>ShipmentEndDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ShipmentStartDate__c</fullName>
        <label>Shipment Start Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Shipment Start Date</masterLabel>
            <refAttrDeveloperName>ShipmentStartDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Start Date</masterLabel>
            <refAttrDeveloperName>StartDate</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__TotalRewardValueAmount__c</fullName>
        <label>Total Reward Value Amount</label>
        <mktDataModelFieldAttributes>
            <definitionCreationType>Standard</definitionCreationType>
            <isDynamicLookup>false</isDynamicLookup>
            <masterLabel>Total Reward Value Amount</masterLabel>
            <refAttrDeveloperName>TotalRewardValueAmount</refAttrDeveloperName>
            <usageTag>None</usageTag>
        </mktDataModelFieldAttributes>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761178517_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead_Id_map_Promotion_LeadId_N_1_164_rel</label>
        <referenceTo>ssot__Lead__dlm</referenceTo>
        <relationshipLabel>Lead_Id_map_Promotion_LeadId_N_1_164_rel</relationshipLabel>
        <relationshipName>rel_1697761178517_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761182131_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramCurrency_Id_map_Promot_rel</label>
        <referenceTo>ssot__LoyaltyProgramCurrency__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramCurrency_Id_map_Promot_rel</relationshipLabel>
        <relationshipName>rel_1697761182131_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761184539_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgram_Id_map_Promotion_Loya_rel</label>
        <referenceTo>ssot__LoyaltyProgram__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgram_Id_map_Promotion_Loya_rel</relationshipLabel>
        <relationshipName>rel_1697761184539_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <mktDataModelAttributes>
        <creationType>Standard</creationType>
        <dataModelTaxonomy>Salesforce_SFDCReferenceModel_0_93</dataModelTaxonomy>
        <dataSpaceName>default</dataSpaceName>
        <isEnabled>false</isEnabled>
        <isSegmentable>false</isSegmentable>
        <isUsedForMetrics>false</isUsedForMetrics>
        <masterLabel>Promotion</masterLabel>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Unassigned</objectCategory>
        <referenceEntityGroup>Promotion</referenceEntityGroup>
        <referenceEntityName>Promotion</referenceEntityName>
        <referenceEntitySubjectArea>Promotion</referenceEntitySubjectArea>
    </mktDataModelAttributes>
</CustomObject>